# embedded-course-design

./: Dockerfile  README.md  docker-compose.yml  start.sh
QT/: CMakeLists.txt  build_arm.sh  run.sh
QT/include/: mainwindow.h
QT/qt_libs/: libQtCore.so.4
QT/src/: main.cpp
数据库/: CMakeLists.txt  build_arm.sh
数据库/include/: sqlite_demo.h
数据库/src/: main.c  sqlite_demo.c
逆序流水灯/: CMakeLists.txt  build_arm.sh
逆序流水灯/include/: led8.h
逆序流水灯/src/: led8.c
